fix: prevent title from covering modal

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -768,7 +768,7 @@ input[id=submit-event] {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 4;
 }
 
 #icon-container {
@@ -777,7 +777,7 @@ input[id=submit-event] {
   grid-template-columns: minmax(1vw, 1fr) minmax(320px, 800px) minmax(1vw, 1fr);
   grid-template-rows: auto;
   margin: 0 2vw;
-  z-index: 2;
+  z-index: 5;
 }
 
 .icon-wrapper {
